force-app/main/default/objects/Asset__c/fields/Asset_Owner__c.field-meta.xml
<CustomField>
    <fullName>Asset_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Asset Owner</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Asset.</relationshipLabel>
    <relationshipName>Asset</relationshipName>
    <type>Lookup</type>
</CustomField>