force-app/main/default/objects/Asset__c/fields/Inventory_for_list_view__c.field-meta.xml
<CustomField>
    <fullName>Inventory_for_list_view__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>BAO NK: This is to show asset related list in Inventory record</description>
    <label>Inventory (for list view)</label>
    <referenceTo>Inventory__c</referenceTo>
    <relationshipLabel>Asset.</relationshipLabel>
    <relationshipName>Asset</relationshipName>
    <type>Lookup</type>
</CustomField>