force-app/main/default/objects/Asset__c/fields/Parent_Asset__c.field-meta.xml
<CustomField>
    <fullName>Parent_Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Asset</label>
    <referenceTo>Asset__c</referenceTo>
    <relationshipLabel>Asset.</relationshipLabel>
    <relationshipName>Asset</relationshipName>
    <type>Lookup</type>
</CustomField>