force-app/main/default/objects/Asset__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Product.</label>
    <referenceTo>Product__c</referenceTo>
    <relationshipLabel>Asset.</relationshipLabel>
    <relationshipName>Asset</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>