force-app/main/default/objects/Asset__c/fields/Usage_Status__c.field-meta.xml
<CustomField>
    <fullName>Usage_Status__c</fullName>
    <label>Usage Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
                <default>true</default>
                <label>Active</label>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>In maintenance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>