force-app/main/default/objects/Asset__c/validationRules/Block_editing_field.validationRule-meta.xml
<ValidationRule>
    <fullName>Block_editing_field</fullName>
    <active>true</active>
    <errorConditionFormula>if(
 and(isblank(PRIORVALUE(Location__c)),isblank(Location__c)),
false,
and(
or(
PRIORVALUE(Location__c)&lt;&gt; Location__c,
PRIORVALUE(Product__c)&lt;&gt; Product__c)
)
)</errorConditionFormula>
    <errorMessage>If you want to update Location of Product/Asset, please use &quot;Product Transfer&quot;</errorMessage>
</ValidationRule>